<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_welcome"/>
        <item
            android:id="@+id/nav_dataset1Item"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_dataset1" />
        <item
            android:id="@+id/nav_dataset2Item"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_dataset2" />
        <item
            android:id="@+id/nav_dataset3Item"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_dataset3" />
    </group>
</menu>
