<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dataset1">

    <fragment
        android:id="@+id/nav_dataset1"
        android:name="com.example.testbackup.ui.dataset1.Dataset1Fragment"
        android:label="@string/menu_dataset1"
        tools:layout="@layout/fragment_dataset1" />

    <fragment
        android:id="@+id/nav_dataset2"
        android:name="com.example.testbackup.ui.dataset2.Dataset2Fragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_dataset2" />

    <fragment
        android:id="@+id/nav_dataset3"
        android:name="com.example.testbackup.ui.dataset3.Dataset3Fragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_dataset3" />

    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.example.testbackup.ui.welcome.WelcomeFragment"
        android:label="Welcome"
        tools:layout="@layout/fragment_welcome" />

</navigation>